# visor

./: .eslintrc.cjs  .gitignore  README.md  anvil.json  anvil.txt  index.html  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.github/workflows/: release.yml
.scripts/: move-binary.js
src/: App.svelte  anvil.ts  app.scss  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: ConfigData.svelte  Count.svelte  Greet.svelte  Icons.svelte  MainNav.svelte  NavItem.svelte  Stat.svelte  anvil.json  getConfig.ts  utils.ts
src/lib/clients/: public.ts  test.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/accounts/: +page.svelte
src/routes/blocks/: +page.svelte
src/routes/log/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/transactions/: +page.svelte
src/styles/: normalize.scss
src/views/: +page.svelte  Accounts.svelte  Blocks.svelte  ConfigData.svelte  Log.svelte  MainNav.svelte  Settings.svelte  TopStats.svelte
