[package]
name = "anvil-ui"
version = "0.0.0"
description = "Anvil GUI: A fast local Ethereum development node"
authors = ["you"]
license = "GPL-3.0"
repository = "https://github.com/sameoldlab/anvil-ui"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["fs-exists", "fs-read-file", "path-all", "shell-sidecar"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
